Update telco.viz.json location

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ categoryFilters = [];
 
 window.onload = function() {
 
-   var vizJSONUrl = '/telco.viz.json';
+   var vizJSONUrl = 'telco.viz.json';
 
    $.getJSON(vizJSONUrl, function(vizJSON) {
       var diJSON =  {
